--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,24 @@
-header{
-    display: flex;
-    flex-direction: row;
-}
-header img{
-    max-width: 400px;
-}
-
-.heading{
-    font-family: 'Ubuntu';
-    font-size: 100px;
-}
+* {
+    margin: 0;
+    padding: 0;
+ }
 
 .second-section{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .second-section img{
     max-width: 500px;
-    padding-left: 40px;
-
 }
 
 article{
     max-width: 500px;
     font-family: 'Hachi Maru Pop', cursive;
     margin: 20px;
-    margin-left: 100px;
     padding-top: 40px;
     padding-right: 30px;
     padding-left: 30px;
@@ -34,5 +26,27 @@ article{
     line-height: 32px;
     background-color: #ffffff;
     background-image: url("https://www.transparenttextures.com/patterns/notebook-dark.png");
+}
+
+.work{
+padding: 30px;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+justify-content: center;
+align-items: center;
+}
+h2{
+    font-family: 'Ubuntu';
+    margin-left: 100px;
+}
+
+.work img{
+    max-width: 300px;
+    padding: 30px;
+}
+
+.mainpic{
+    max-width: 100vw;
 }
 
