--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@
 
 article{
     max-width: 500px;
-    font-family: 'Hachi Maru Pop', cursive;
+    font-family: 'Neucha', cursive;
+    font-size: 25px;
     padding: 30px;
     padding-top: 40px;
     padding-bottom: 40px;
@@ -50,8 +51,13 @@ h2{
 }
 
 
+.joinus{
+    
+}
+
+
 @media (max-width: 48em){
     .second-section p{
-        font-size: 15px;
+        font-size: 18px;
     }
 }
